# ecological-emergent-behavior

./: .env.example  .gitignore  README.md  pyproject.toml
ecological_emergent_behavior/ablations/: chase_runs_128.sh  chase_runs_512.sh
ecological_emergent_behavior/experiments/: long_distance_resource_gathering.sh  run_simulation.py  sweep.py  train.py  visual_foraging_and_predation.sh
ecological_emergent_behavior/models/: bug_model.py  encoder.py  mutable_linear.py  newborn.py
ecological_emergent_behavior/utils/: log.py  report.py  xla.py
